no round corners for imagepopup headerbar and fix valign of scale

--- a/data/gtk-css/pre320/basics.css
+++ b/data/gtk-css/pre320/basics.css
@@ -97,6 +97,11 @@ GtkListBoxRow,
 	font-weight: bold;
 }
 
+.imageOverlay {
+	border-top-right-radius: 0;
+	border-top-left-radius: 0;
+}
+
 /*******************/
 /* split headerbar */
 /*******************/
